<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Pizza Ordering App</string>
    <string name="input">Enter your name</string>
    <string name="base">Pizza base: $5</string>
    <string name="meat">Toppings: Meat</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="ham">Ham</string>
    <string name="veggies">Toppings: Vegetables</string>
    <string name="peppers">Green Bell Pepper</string>
    <string name="pineapple">Pineapple</string>
    <string name="quantity">Quantity:</string>
    <string name="initial_quantity">1</string>
    <string name="too_much_pizza">Please select less than one hundred pizzas</string>
    <string name="too_little_pizza">Please select at least one pizza</string>
    <string name="submit">Submit Order</string>
    <string name="order">Thank You For Your Order!</string>
    <string name="order_summary_name">Name:<xliff:g example="Lia" id="name">%s</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_summary_pepperoni">Add Pepperoni? <xliff:g example="yes" id="addPepperoni">%s</xliff:g></string>
    <string name="order_summary_ham">Add Hame? <xliff:g example="yes" id="addHam">%s</xliff:g></string>
    <string name="order_summary_peppers">Add Peppers? <xliff:g example="yes" id="addPeppers">%s</xliff:g></string>
    <string name="order_summary_pineapple">Add Pineapple? <xliff:g example="yes" id="addPinepple">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_total">Total: $ <xliff:g example="10" id="price">%.2f</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="summary">Order Summary</string>
    <string name="order_summary">Your order is:</string>
    <string name="review"></string>

    <string name="email">Send to Email</string>
</resources>