<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/input" />

            <TextView
                android:id="@+id/base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/base"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/toppings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat" />

            <CheckBox
                android:id="@+id/checkPepp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pepperoni" />

            <CheckBox
                android:id="@+id/checkHam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ham" />

            <TextView
                android:id="@+id/toppingVeggies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/veggies" />

            <CheckBox
                android:id="@+id/checkPeppers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/peppers" />

            <CheckBox
                android:id="@+id/checkPineapple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pineapple" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="420dp">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="40dp"
                        android:layout_height="43dp"
                        android:layout_marginStart="8dp"
                        android:onClick="increment"
                        android:text="+"
                        app:layout_constraintStart_toEndOf="@+id/quantity_text_view"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/quantity_text_view"

                        android:layout_width="17dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/initial_quantity"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/button2"
                        app:layout_constraintStart_toEndOf="@+id/button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="40dp"
                        android:layout_height="43dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="8dp"
                        android:onClick="decrement"
                        android:text="-"
                        app:layout_constraintEnd_toStartOf="@+id/quantity_text_view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="59dp"
                        android:onClick="submitOrder"
                        android:text="@string/submit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/button2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="91dp"
                        android:layout_height="91dp"
                        android:layout_marginStart="152dp"
                        android:layout_marginEnd="175dp"
                        android:layout_marginBottom="116dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/pizza" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>